Fixed dark mode hover color

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@
   --light-text: #4db366;
   --color-dark: #00FF41;
   --color: #00FF41;
-  --color-light: #4db366;
+  --color-light: #004512;
   --slider: #4db366;
   --slider-active: #4db366;
   --rank-size: 1.2em;
